subido con manifest

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ Princess image:
 http://crossfire.real-time.com/images/princess_111.gif
 -->
 <!DOCTYPE html>
+<html manifest="princess.manifest">
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
